fix: skills section alignment

--- a/styles.css
+++ b/styles.css
@@ -315,6 +315,11 @@ nav {
 /* experinece end */
 
 /* skills start */
+.skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .skills-list {
   display: flex;
   flex-direction: row;
